fix: not to force scrollbar for nav

--- a/source/css/_components/partial/navbar.styl
+++ b/source/css/_components/partial/navbar.styl
@@ -14,7 +14,6 @@
   max-width: 100%
   margin: 1px
   border-radius: 64px
-  overflow: scroll visible
   scrollbar(0, 0)
   
 .navbar nav
